--- a/week04/Aashna.html
+++ b/week04/Aashna.html
@@ -25,7 +25,7 @@
 				
 				 </p1>
 				 <p2>
-				<h7> Major: Interative Media Arts(IMA) </h7>
+				<h7> Major: Interactive Media Arts(IMA) </h7>
 				<img src="ima1.png" > </p2>
 
 				<p3>
