--- a/landingPage/landingPage.html
+++ b/landingPage/landingPage.html
@@ -1,18 +1,21 @@
 <!DOCTYPE html>
 <html>
 	<head>
-  <title> Landing Page </title>
+  <title> web dev 2021 </title>
   <!-- this is a comment. A human can read it but the browser can not. -->
 		<link rel="stylesheet" type="text/css" href="style.css">
 		</head>
 		<body>
 			<main>
 				<h3> Jinho Yang </h3>
-				<a href="../week01/website.html"; class="button1"> week.01 </a>
-				<a href="../week03/index.html"; class="button2"> week.03</a>
-				
+				<div class= "content"><a href="../week01/website.html"; class="week1"> The Ways of Seeing : The Way I See </a></div>
+				<div class= "content"><a href="../week03/index.html"; class="week3"> Text Response</a></div>
+				<div class= "content"><a href="../week04/Aashna.html"; class="week4"> Portrait of Aashna</a></div>
+				<div class= "content"><a href="../week05/titlepage.html"; class="week5"> LUNGS </a></div>
+				<div class= "content"><a href="../midterm/main.html"; class="midterm"> Photographs. </a></div>
+	
 
-				<h4> WEB. DEV. 2021</h4>
+				<h4> WEB DEV 2021</h4>
 				
 
 		 
