--- a/week01/highlights.html
+++ b/week01/highlights.html
@@ -17,7 +17,7 @@
 		"I think we are always dressing up for a part" </h3>
 
 	<p2> <img src= "part3.png"; width="800"; height ="600"> </p2>
-		<h1 style = "color: white; text-align: center; font-size: 30; font-family: 'helvetica'; margin-left: 30px; margin-right: 30px; margin-top: 40px; margin-bottom: 40px"> The episode really made me question "What makes material so desirable and why do people get obsessed with it?" I thought that it is not the inherent value of the object(what it does in life) but rather the implications(the brand, the image it implies) that the object holds. For example, wearing using a particular type of cologne makes you seem much presitigous.
+		<h1 style = "color: white; text-align: center; font-size: 30; font-family: 'helvetica'; margin-left: 30px; margin-right: 30px; margin-top: 40px; margin-bottom: 40px"> The episode really made me question "What makes material so desirable and why do people get obsessed with it?" I thought that it is not the inherent value of the object(what it does in life) but rather the implications(the brand, the image it implies) that the object holds. For example, using a particular type of cologne makes you seem much presitigous.
 	
 	<p3> <img src= "part4.png"; width="800"; height ="600"></p3>
 		<h1 style = "color: white; text-align: center; font-size: 30; font-family: 'helvetica'; margin-left: 30px; margin-right: 30px; margin-top: 40px; margin-bottom: 40px"> I found this part to be thought-provoking. Today, social media like instagram makes us envy one another by the fake glamour we create and make ourselves unconsciously compare our lives to other people's lives. This is because the position of glamour is opened to anyone, but only enjoyed by a few. 
