--- a/midterm/main.html
+++ b/midterm/main.html
@@ -10,18 +10,20 @@
 
   <div class ="container">
   	<div class = "item1">
-  		<div class = "mainmap"> <img src = "seoulmapcropped.png" class ="map">
-  		<div class = "onhover">
-  			<div class="Bonhover"><a href ="banpo.html"> Banpo </a> </div>
-  			<div class="Gonhover"><a href ="gwanghwamun.html" > Gwanghwamun  </a> </div>
-  			<div class="Honhover"><a href ="hongdae.html" > Hongdae </a> </div>
-  			<div class="Ionhover"><a href ="insadong.html" >  Insadong </a></div>
-  			<div class="Itonhover"><a href ="itaewon.html" > Itaewon </a></div>
-  			<div class="Jonhover"><a href ="jongno.html" > Jongno  </a> </div>
-  			</div>
+  		<div class = "mainmap"> 
+  			<img src = "seoulmapcropped.png" class ="map">
+  				<div class = "onhover">
+  					<div class="Bonhover"><a href ="banpo.html"><h200> Banpo </h200>  </a> </div>
+  					<div class="Gonhover"><a href ="gwanghwamun.html" ><h200> Gwanghwamun </h200>   </a> </div>
+  					<div class="Honhover"><a href ="hongdae.html" ><h200> Hongdae </h200> </a> </div>
+  					<div class="Ionhover"><a href ="insadong.html" > <h200> Insadong </h200> </a></div>
+  					<div class="Itonhover"><a href ="itaewon.html" ><h200> Itaewon </h200> </a></div>
+  					<div class="Jonhover"><a href ="jongno.html" ><h200> Jongno  </h200> </a> </div>
+  				</div>
+  		</div>
+  		
 
 
-  		 </div>
   		<div class = "places" > <a href ="banpo.html" class = "B" data-hover= "반포"> Banpo </a> </div>
   		<div class = "places" > <a href ="gwanghwamun.html" class ="G" data-hover = "광화문" > Gwanghwamun  </a> </div>
   		<div class = "places"> <a href ="hongdae.html" class ="H" data-hover = "홍대"> Hongdae </a> </div>
@@ -35,9 +37,10 @@
 
   	<div class = "item2">
    		<li><a href= "https://youtu.be/3P1CnWI62Ik" class = "videolink"> <h7> Welcome to Seoul</h7> </a> </li></div>
+
   	<div class = "item3">
-   		 <p2> by Jinho Yang </p2> </div>
- 
+   		 <p2> photos and words by Jinho Yang </p2>
+   		  </div>
 </div>
 
 
