--- a/midterm/banpo.html
+++ b/midterm/banpo.html
@@ -9,8 +9,9 @@
 		<h100> Banpo 반포 </h100>
 
 	<div class ="description">
-		<div class ="allphotos">
-		<img src="banpoBridge.png" class ="alphotos"></div>
+
+		<div class ="images">
+		<img src="banpoBridge.png" class ="allphotos"></div>
 		<div class ="words">
 			<p100> It's never so early nor late to see athletes running across the banpo bridge. Banpo bridge is definitely a hot place for runners and bikers. On both sides of the bridge is a place for friends and lovers to enjoy their time. On special occasions, the landmark would light up in rainbow along with beautiful fountain show, making everlasting memories for families who were out for a picnic. </p100>
 			
