--- a/midterm/hongdae.html
+++ b/midterm/hongdae.html
@@ -9,8 +9,13 @@
 	<h100> Hongdae 홍대 </h100>
 
 	<div class ="description">
-		<div class ="hongdaeimage">
-		<img src="hongdae.png" class ="allphotos"></div>
+			<div class ="images">
+				<img src="hongdae.png" class ="allphotos">
+				<img src="hongdae2.png" class ="allphotos">
+				<img src="hongdae3.png" class ="allphotos">
+				<img src="hongdae4.png" class ="allphotos">
+			</div>
+
 		<div class ="words">
 			<p100> Hongdae is a shorter term for "Hongik University". As it is located right by the school famous for its arts program, the streets are already occupied with artsy students hanging out with their friends. You can easily spot a gameroom with crane games you can enjoy for just several dollars. And who knows, you might exchange it for stuffed pikatchu! </p100>
 			
