--- a/midterm/insadong.html
+++ b/midterm/insadong.html
@@ -9,8 +9,14 @@
 		<h100> Insadong 인사동 </h100>	
 
 	<div class ="description">
-		<div class ="insadongimage">
-		<img src="insadong.png" class ="allphotos"></div>
+			<div class ="images">
+				<img src="insadong.png" class ="allphotos">
+
+
+
+			</div>
+
+			
 		<div class ="words">
 			<p100> If you are looking to find the most Korean place in Seoul, Insadong is a place for you. Streets of Insadong are filled with stores that sell traditional Korean gifts, merchs, and other cool stuffs. But the true beauty lies in all the hidden alleyways. Although it may looks sketchy at first, the orange lights brighten up the narrow path giving warmth to the place. You may end up at a place with neon signs that create beautiful illusions. </p100>
 			
