--- a/midterm/itaewon.html
+++ b/midterm/itaewon.html
@@ -7,26 +7,19 @@
 </head>
 <body>
 	<h100> Itaewon 이태원 </h100>
+	
 	<div class ="description">
-		<div class ="itaewonimage">
-		<img src="itaewonStreet.png" class ="allphotos"></div>
+		<div class ="images">
+				<img src="itaewonStreet.png" class ="allphotos" >
+				<img src="itaewon3.jpg" class ="allphotos">
+				<img src="itaewon2.jpg" class ="justthisphoto" >
+			</div>	
+
+
 		<div class ="words">
-			<p100> Filled with exotic places and vibes, Itaewon is a multicultural hub of Seoul. It is located in Yongsan-gu, right above the Han River. Vibrant graffities and street signs decorate the streets of Itaewon, exuding youthful spirit. From people from all over the world enjoying their late Friday night to ambitious cafe-owners working hard to grow their business, you'll get to see diverse ways of living. Itaewon is truly a city that never sleeps. To find out more about this place, watching the latest K-drama "Itaewon Class" would help.  </p100> 
-
-
-
-
+			<p100> Filled with exotic places and vibes, Itaewon is a multicultural hub of Seoul. It is located in Yongsan-gu, right above the Han River. Vibrant graffities and street signs decorate the streets of Itaewon, exuding youthful spirit. From people from all over the world enjoying their late Friday night to ambitious cafe-owners working hard to grow their business, you'll get to see diverse ways of living. Itaewon is truly a city that never sleeps. To find out more about this place, watching the latest K-drama "Itaewon Class" would help.  </p100>
 		</div>
 
 	</div>
-
-
-
-
-
-
-
-
-
 <body>
 <html>
