--- a/landingPage/landingPage.html
+++ b/landingPage/landingPage.html
@@ -13,6 +13,7 @@
 				<div class= "content"><a href="../week04/Aashna.html"; class="week4"> Portrait of Aashna</a></div>
 				<div class= "content"><a href="../week05/titlepage.html"; class="week5"> LUNGS </a></div>
 				<div class= "content"><a href="../midterm/main.html"; class="midterm"> Photographs. </a></div>
+				<div class= "content"><a href="../week09-2/index.html"; class="week09-2"> The Medium is the... </a></div>
 	
 
 				<h4> WEB DEV 2021</h4>
