--- a/week10/index.html
+++ b/week10/index.html
@@ -15,6 +15,7 @@
 <div id = "title">
   <h1> NYU Trivia </h1>
   <h2> Perstare et Praestare </h2>
+    <h3> * wireframe </h3>
 </div>
 
     <p1 id= "description"></p1>
