--- a/week10/index.html
+++ b/week10/index.html
@@ -15,7 +15,7 @@
 <div id = "title">
   <h1> NYU Trivia </h1>
   <h2> Perstare et Praestare </h2>
-    <h3> * wireframe </h3>
+    <a href = "http://jinho72.github.io/week10/wireframe_JQuery.png> * wireframe </a>
 </div>
 
     <p1 id= "description"></p1>
