--- a/landingPage/landingPage.html
+++ b/landingPage/landingPage.html
@@ -15,7 +15,7 @@
 				<div class= "content"><a href="../midterm/main.html"; class="midterm"> Photographs. </a></div>
 				<div class= "content"><a href="../week09-2/index.html"; class="week09-2"> The Medium is the... </a></div>
 				<div class= "content"><a href="../week10/index.html"; class="week09-2"> NYU Trivia </a></div>
-	
+				<div class= "content"><a href="../final/final.html"; class="week14&15"> REMIX MACHINE </a></div>
 
 				<h4> WEB DEV 2021</h4>
 				
