--- a/landingPage/landingPage.html
+++ b/landingPage/landingPage.html
@@ -13,9 +13,12 @@
 				<div class= "content"><a href="../week04/Aashna.html"; class="week4"> Portrait of Aashna</a></div>
 				<div class= "content"><a href="../week05/titlepage.html"; class="week5"> LUNGS </a></div>
 				<div class= "content"><a href="../midterm/main.html"; class="midterm"> Photographs. </a></div>
+				<div class= "content"><a href="../week09/index.html"; class="week09"> Buttons </a></div>
 				<div class= "content"><a href="../week09-2/index.html"; class="week09-2"> The Medium is the... </a></div>
-				<div class= "content"><a href="../week10/index.html"; class="week09-2"> NYU Trivia </a></div>
+				<div class= "content"><a href="../week10/index.html"; class="week11"> NYU Trivia </a></div>
+				<div class= "content"><a href="../finalproposal/proposal.html"; class="week12&13"> Final Proposal </a></div>
 				<div class= "content"><a href="../final/final.html"; class="week14&15"> REMIX MACHINE </a></div>
+				
 
 				<h4> WEB DEV 2021</h4>
 				
